# albumBot

./: .env.EXAMPLE  .gitignore  Makefile  README.md  pyproject.toml
albumbot/: __main__.py  bot.py  config.py  db.py
albumbot/music/: spotifyReleases.py
